--- a/01_docker_compose/simple_project/app/Dockerfile
+++ b/01_docker_compose/simple_project/app/Dockerfile
@@ -1,5 +1,8 @@
-FROM python:3.10
+#pull oficial image
+FROM python:latest
 
+# set work directory
+RUN mkdir /opt/app
 WORKDIR /opt/app
 
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -13,12 +16,17 @@ COPY run_uwsgi.sh run_uwsgi.sh
 COPY requirements.txt requirements.txt
 COPY uwsgi/uwsgi.ini uwsgi.ini
 
+# install psycopg2 dependencies
+RUN apk update \
+    && apk add postgresql-dev gcc python3-dev musl-dev
+
 RUN  mkdir -p /var/www/static/ \
      && mkdir -p /var/www/media/ \
      && mkdir -p /opt/app/static/ \
      && mkdir -p /opt/app/media/ \
      && pip install --upgrade pip \
      && pip install -r requirements.txt
+
 
 COPY . .
 
