--- a/01_docker_compose/simple_project/configs/site.conf
+++ b/01_docker_compose/simple_project/configs/site.conf
@@ -1,3 +1,7 @@
+upstream djangodocker {
+    server django:8000;
+}
+
 server {
     listen       80 default_server;
     listen       [::]:80 default_server;
@@ -12,6 +16,14 @@ server {
     location ~* \.(?:jpg|jpeg|gif|png|ico|css|js)$ {
         log_not_found off;
         expires 90d;
+    }
+
+    location /static/ {
+        alias /app/static/;
+    }
+
+    location /media/ {
+        alias /app/media/;
     }
 
     location / {
