--- a/01_docker_compose/simple_project/configs/site.conf
+++ b/01_docker_compose/simple_project/configs/site.conf
@@ -10,7 +10,7 @@ server {
     root /data;
 
     location @backend {
-        proxy_pass http://service:8000;
+        proxy_pass http://django:8000;
     }
 
     location ~* \.(?:jpg|jpeg|gif|png|ico|css|js)$ {
@@ -24,6 +24,10 @@ server {
 
     location /media/ {
         alias /app/media/;
+    }
+
+    location /admin/ {
+
     }
 
     location / {
