--- a/02_django_api/nginx.conf
+++ b/02_django_api/nginx.conf
@@ -1,23 +1,35 @@
-upstream djangodocker {
-    server django:8000;
+worker_processes  1;
+
+events {
+  worker_connections  1024;
 }
 
-server {
+http {
+  include       mime.types;
+  include conf.d/*.conf;
 
-    listen 80;
+  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    location / {
-        proxy_pass http://djangodocker;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-    location /static/ {
-        alias /02_movies_admin/static/;
-    }
+  sendfile        on;
+  tcp_nodelay     on;
+  tcp_nopush      on;
+  client_max_body_size 200m;
 
-    location /media/ {
-        alias /02_movies_admin/media/;
-    }
+  gzip on;
+  gzip_comp_level 3;
+  gzip_min_length 1000;
+  gzip_types
+        text/plain
+        text/css
+        application/json
+        application/x-javascript
+        text/xml
+        text/javascript;
 
+  proxy_redirect     off;
+  proxy_set_header   Host             $host;
+  proxy_set_header   X-Real-IP        $remote_addr;
+  proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
 }
